examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error, 1 warning • examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx
// Warning: Redundant Match Arm
//
// this arm is unreachable — earlier arms already cover it
//
//   examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx:54:9
//    |
// 54 |         _ -> "maybe",
//    |         ^^^^^^^^^^^^
//
//
// error[E300]: Argument Type Mismatch
//
// I found the wrong type in the 1st argument to `expect_int`.
//
//   examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx:59:32
//    |
// 46 | fn expect_int(x: Int) -> Int {
//    | ---------------------------- `expect_int` expects `Int` as the 1st parameter
// 47 |     x
// 48 | }
// ... |
// 57 |
// 58 | fn main() -> Unit with IO {
// 59 |     print(to_string(expect_int(choose(true))))
//    |                                ^^^^^^^^^^^^
//    |                                ------------ this argument has type `String`
//
// Note:
//   expected argument type: Int
//   found argument type: String
//   the actual argument type is inferred from this expression
//   the expected argument type comes from the function signature
//
// Help:
//   Pass a `Int` value as the 1st argument.
//
// Found 1 error and 1 warning.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn expect_int(x: Int) -> Int {
    x
}

fn choose(flag: Bool) -> String {
    match flag {
        true -> "yes",
        false -> "no",
        _ -> "maybe",
    }
}

fn main() -> Unit with IO {
    print(to_string(expect_int(choose(true))))
}
